Login layout bug, registration button

--- a/app/assets/stylesheets/_colours.css.scss
+++ b/app/assets/stylesheets/_colours.css.scss
@@ -11,7 +11,7 @@ $storm      :   rgba(224,228,204, 1);
 $goldfish   :   rgba(243,134,48, 1);
 $white      :   white;
 
-$error      :   red;
+$error      :   rgba(230,0,0, 1);
 
 
 
